# openssl-cmake

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dumb.cpp  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: Codespell.yml  Docs.yml  Linux-Clang.yml  Linux-GCC.yml  MacOS-Clang.yml  MacOS-GCC.yml  Windows-MSVC.yml  Windows-MSYS2.yml  Windows-MinGW.yml  dockcross.yml  linux.yml  macOS.yml  windows.yml
Patchs/ssl/: CMakeLists.txt
cmake/: GetCMakeMM.cmake
include/asm-generic/: mman-common.h
patch/: CMakeLists.txt
patch/crypto/: CMakeLists.txt
patch/ssl/: CMakeLists.txt
patches/: c_rehash.cmake
patches/apps/: CA.pl.cmake  tsget.cmake
patches/cmake/: MSVCRuntime.cmake  toolchain-mingw32.cmake  toolchain-mingw64.cmake
patches/crypto/: CMakeLists.txt
patches/ssl/: CMakeLists.txt
patchs/: CMakeLists.txt
patchs/apps/: CMakeLists.txt
patchs/crypto/: CMakeLists.txt
tests/: CMakeLists.txt  Test.cpp
